[gd_scene load_steps=43 format=3 uid="uid://bci0et88hor7o"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_8cvu2"]
[ext_resource type="PackedScene" uid="uid://6115iosldobl" path="res://scenes/fps.tscn" id="2_efchm"]
[ext_resource type="PackedScene" uid="uid://b6ci8gm4r6xi7" path="res://player/dialoguebox/dialoguebox.tscn" id="3_k8lts"]
[ext_resource type="PackedScene" uid="uid://1f6gdim43kly" path="res://player/inventory.tscn" id="4_5quqt"]
[ext_resource type="PackedScene" uid="uid://bg2chh7aa3gy0" path="res://player/player.tscn" id="4_q3fe0"]
[ext_resource type="Script" path="res://player/camera_1.gd" id="5_64igt"]
[ext_resource type="PackedScene" uid="uid://dt8kcd1ju4jte" path="res://enviroments/new_ukon/npcs/spamton/spamton.tscn" id="5_rtnhy"]
[ext_resource type="Texture2D" uid="uid://do7x2ss6l4war" path="res://enviroments/new_ukon/npcs/roblox/noob1Sheet1.png" id="8_mdfu5"]
[ext_resource type="Script" path="res://enviroments/new_ukon/npcs/roblox/npc.gd" id="9_ct3wn"]
[ext_resource type="PackedScene" uid="uid://cikvycqsrupnm" path="res://enviroments/new_ukon/city.tscn" id="13_leu75"]
[ext_resource type="Texture2D" uid="uid://pvwvucct7bda" path="res://enviroments/new_ukon/npcs/dan/danP.png" id="13_wocn8"]
[ext_resource type="Shader" path="res://scenes/filmgarin.gdshader" id="15_8le31"]
[ext_resource type="PackedScene" uid="uid://dp6wua45gqq0x" path="res://enviroments/new_ukon/cars/car1/car1.tscn" id="20_ee0ja"]

[sub_resource type="Environment" id="Environment_pd302"]
background_mode = 1
background_color = Color(0.709804, 0.772549, 0.827451, 1)
background_energy_multiplier = 1.1
ambient_light_source = 2
ambient_light_color = Color(0.580392, 0.788235, 1, 1)
ambient_light_energy = 0.2
tonemap_mode = 2
ssr_enabled = true
ssao_enabled = true
ssao_radius = 0.4
ssao_intensity = 1.0
ssao_power = 10.0907
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.3
glow_bloom = 0.01
glow_blend_mode = 0
fog_enabled = true
fog_light_color = Color(0.878431, 0.733333, 0.721569, 1)
fog_density = 0.001
fog_sky_affect = 0.0
adjustment_enabled = true
adjustment_contrast = 1.1
adjustment_saturation = 1.1

[sub_resource type="AtlasTexture" id="AtlasTexture_rawtt"]
atlas = ExtResource("8_mdfu5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdyjb"]
atlas = ExtResource("8_mdfu5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyx8r"]
atlas = ExtResource("8_mdfu5")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckipb"]
atlas = ExtResource("8_mdfu5")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urw2q"]
atlas = ExtResource("8_mdfu5")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tky4"]
atlas = ExtResource("8_mdfu5")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni2g0"]
atlas = ExtResource("8_mdfu5")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vdsr"]
atlas = ExtResource("8_mdfu5")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16upk"]
atlas = ExtResource("8_mdfu5")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu66l"]
atlas = ExtResource("8_mdfu5")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxhch"]
atlas = ExtResource("8_mdfu5")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxn3f"]
atlas = ExtResource("8_mdfu5")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_henm1"]
atlas = ExtResource("8_mdfu5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g7ni"]
atlas = ExtResource("8_mdfu5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18l5k"]
atlas = ExtResource("8_mdfu5")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pks4r"]
atlas = ExtResource("8_mdfu5")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2wr0"]
atlas = ExtResource("8_mdfu5")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_abiof"]
atlas = ExtResource("8_mdfu5")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohmix"]
atlas = ExtResource("8_mdfu5")
region = Rect2(192, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8cob"]
atlas = ExtResource("8_mdfu5")
region = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p4dw"]
atlas = ExtResource("8_mdfu5")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nu7v"]
atlas = ExtResource("8_mdfu5")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yleeu"]
atlas = ExtResource("8_mdfu5")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s2si"]
atlas = ExtResource("8_mdfu5")
region = Rect2(480, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_eolbs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rawtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdyjb")
}],
"loop": true,
"name": &"down_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyx8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckipb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urw2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tky4")
}],
"loop": true,
"name": &"down_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni2g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vdsr")
}],
"loop": true,
"name": &"left_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_16upk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu66l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxhch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxn3f")
}],
"loop": true,
"name": &"left_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_henm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g7ni")
}],
"loop": true,
"name": &"right_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_18l5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pks4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2wr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abiof")
}],
"loop": true,
"name": &"right_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohmix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8cob")
}],
"loop": true,
"name": &"up_idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p4dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nu7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yleeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s2si")
}],
"loop": true,
"name": &"up_walk",
"speed": 5.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_ehoa3"]
radius = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ktsps"]
radius = 0.25
height = 1.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bphsa"]
shader = ExtResource("15_8le31")
shader_parameter/grain_size = 1.0
shader_parameter/animate = true

[node name="main" type="Node3D"]
script = ExtResource("1_8cvu2")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.48996, 0.745596, 0.451692, -7.38663e-08, -0.518147, 0.855292, 0.871745, 0.419059, 0.253872, 0, 29.7961, 0)
light_color = Color(1, 1, 0.87451, 1)
shadow_enabled = true
shadow_blur = 0.0

[node name="sky" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pd302")

[node name="UI" type="CanvasLayer" parent="."]

[node name="fps" parent="UI" instance=ExtResource("2_efchm")]

[node name="dialoguebox" parent="UI" instance=ExtResource("3_k8lts")]

[node name="inventory" parent="UI" instance=ExtResource("4_5quqt")]
visible = false

[node name="player" parent="." instance=ExtResource("4_q3fe0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.1572, 1.09838, 26.3216)

[node name="camera1" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, -16.1572, 4.59838, 31.8216)
fov = 50.0
size = 6.046
script = ExtResource("5_64igt")

[node name="car1" parent="." instance=ExtResource("20_ee0ja")]
transform = Transform3D(-0.989804, 0, 0.142439, 0, 1, 0, -0.142439, 0, -0.989804, -17.4711, 7.20253, 19.49)

[node name="Spamton" parent="." instance=ExtResource("5_rtnhy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5423, 0.487026, 6.66317)
pixel_size = 0.003

[node name="npc" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14376, 0.479512, 1.56204)
pixel_size = 0.04
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_eolbs")
animation = &"down_idle"
script = ExtResource("9_ct3wn")

[node name="npcArea" type="Area3D" parent="npc"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc/npcArea"]
shape = SubResource("SphereShape3D_ehoa3")

[node name="StaticBody3D" type="StaticBody3D" parent="npc"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc/StaticBody3D"]
shape = SubResource("CapsuleShape3D_ktsps")

[node name="walkrandom" type="Timer" parent="npc"]
wait_time = 2.0
autostart = true

[node name="city" parent="." instance=ExtResource("13_leu75")]

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(570, 539)
texture = ExtResource("13_wocn8")

[node name="film grain" type="SubViewportContainer" parent="."]
material = SubResource("ShaderMaterial_bphsa")
offset_right = 1440.0
offset_bottom = 1080.0
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="film grain"]
handle_input_locally = false
size = Vector2i(1440, 1080)
render_target_update_mode = 4

[node name="Node3D" type="Node3D" parent="film grain/SubViewport"]

[connection signal="dialboxstatus" from="UI/dialoguebox" to="player" method="_on_dialoguebox_dialboxstatus"]
[connection signal="dialogueOption" from="UI/dialoguebox" to="Spamton" method="_on_dialoguebox_dialogue_option"]
[connection signal="dialogueOption" from="UI/dialoguebox" to="city" method="_on_dialoguebox_dialogue_option"]
[connection signal="currentPosition" from="player" to="camera1" method="_on_player_current_position"]
[connection signal="InCarS" from="car1" to="player" method="_on_car_1_in_car_s"]
[connection signal="interacted" from="Spamton" to="UI/dialoguebox" method="_on_spamton_interacted"]
[connection signal="interacted" from="npc" to="UI/dialoguebox" method="_on_npc_interacted"]
[connection signal="body_entered" from="npc/npcArea" to="npc" method="_on_npc_area_body_entered"]
[connection signal="body_exited" from="npc/npcArea" to="npc" method="_on_npc_area_body_exited"]
[connection signal="timeout" from="npc/walkrandom" to="npc" method="_on_walkrandom_timeout"]
[connection signal="manhole_interacted" from="city" to="UI/dialoguebox" method="_on_city_manhole_interacted"]
[connection signal="store_addInv" from="city" to="UI/inventory" method="_on_city_store_add_inv"]
[connection signal="store_openInv" from="city" to="UI/inventory" method="_on_city_store_open_inv"]
